--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "add": "^2.0.6",
     "autoprefixer": "^10.4.2",
-    "next": "12.0.8",
+    "next": "^12.2.5",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/node": "^18.7.6",
+    "@types/react": "^18.0.17",
     "eslint": "8.7.0",
-    "eslint-config-next": "12.0.8"
+    "eslint-config-next": "12.0.8",
+    "typescript": "^4.7.4"
   }
 }
